# isograph

./: .gitignore  .npmignore  .npmrc  .oxlintrc.json  .pre-commit-config.yaml  .prettier.config.js  .prettierignore  .prettierrc.json  404.html  CI-STATUS.md  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  clippy.toml  flake.nix  gulpfile.js  index.html  new.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  sitemap.xml  tsconfig.build.json  tsconfig.json  tsdown.config.ts  turbo.json  vitest.workspace.ts
crates/artifact_content/: Cargo.toml
crates/artifact_content/src/: artifact_lookup_cache.rs  eager_reader_artifact.rs  entrypoint_artifact.rs  file_system_state.rs  format_parameter_type.rs  generate_artifacts.rs  generate_updatable_and_parameter_type.rs  imperatively_loaded_fields.rs  import_statements.rs  iso_overload_file.rs  lib.rs  normalization_ast_text.rs  operation_text.rs  persisted_documents.rs  raw_response_type.rs  reader_ast.rs  refetch_reader_artifact.rs  ts_config.rs
crates/boulton_cli/: Cargo.toml  README.md
crates/boulton_cli/src/: batch_compile.rs  boulton_literals.rs  generate_artifacts.rs  main.rs  print.rs  schema.rs
crates/boulton_lang_parser/: Cargo.toml  README.md
crates/boulton_lang_parser/src/: boulton_literal_parse_error.rs  description.rs  lib.rs  parse_bdeclare_literal.rs  peekable_lexer.rs  token_kind.rs
crates/boulton_schema/: Cargo.toml  README.md
crates/boulton_schema/src/: lib.rs  merged.rs  process_resolver_declaration.rs  process_type_definition.rs  schema_types.rs  validate_schema.rs
crates/common_lang_types/: Cargo.toml
crates/common_lang_types/src/: absolute_and_relative_path.rs  deserialization_error.rs  diagnostic.rs  entity_and_selectable_name.rs  file_system_operation.rs  lib.rs  location.rs  location_free_diagnostic.rs  path_and_content.rs  selectable_name.rs  span.rs  string_key_types.rs  string_types.rs  text_with_carats.rs  traits.rs  type_and_field.rs  u32_types.rs
crates/compiler-playground/: Cargo.toml
crates/compiler-playground/src/: lib.rs  main.rs
crates/generate_artifacts/: Cargo.toml
crates/generate_artifacts/src/: eager_reader_artifact.rs  entrypoint_artifact.rs  format_parameter_type.rs  generate_artifacts.rs  imperatively_loaded_fields.rs  import_statements.rs  iso_overload_file.rs  lib.rs  link_type.rs  normalization_ast_text.rs  operation_text.rs  persisted_documents.rs  reader_ast.rs  refetch_reader_artifact.rs  ts_config.rs
crates/graphql_artifact_generation/: Cargo.toml
crates/graphql_artifact_generation/src/: artifact_file_contents.rs  build_combined_graphql_schema.rs  component_reader_artifact.rs  component_reader_artifact_info.rs  eager_reader_artifact.rs  eager_reader_artifact_info.rs  entrypoint_artifact.rs  entrypoint_artifact_info.rs  format_parameter_type.rs  generate_artifacts.rs  imperatively_loaded_fields.rs  import_statements.rs  iso_overload_file.rs  lib.rs  normalization_ast_text.rs  query_text.rs  reader_ast.rs  refetch_reader_artifact.rs  refetch_reader_artifact_info.rs
crates/graphql_lang_parser/: Cargo.toml  README.md
crates/graphql_lang_parser/src/: description.rs  lib.rs  parse_error.rs  parse_schema.rs  peekable_lexer.rs  schema_parse_error.rs
crates/graphql_lang_types/: Cargo.toml  README.md
crates/graphql_lang_types/src/: directive.rs  graphql_directives.rs  graphql_sdl.rs  graphql_type_annotation.rs  lib.rs  schema_def.rs  string_key_types.rs  type_annotation.rs  value.rs  write.rs
crates/graphql_network_protocol/: Cargo.toml
crates/graphql_network_protocol/src/: graphql_network_protocol.rs  lib.rs  parse_nested_schema.rs  parse_type_system_document.rs  process_type_system_definition.rs  query_text.rs  read_schema.rs
crates/graphql_output_format/: Cargo.toml
crates/graphql_output_format/src/: combined_schema.rs  graphql_network_format.rs  graphql_output_format.rs  lib.rs  process_type_system_definition.rs  query_text.rs  read_schema.rs
crates/graphql_schema_parser/: Cargo.toml  README.md
crates/graphql_schema_parser/src/: description.rs  lib.rs  parse_schema.rs  peekable_lexer.rs  schema_parse_error.rs
crates/isograph_api/: Cargo.toml
crates/isograph_api/src/: lib.rs
crates/isograph_cli/: Cargo.toml  README.md
crates/isograph_cli/src/: artifact_file_contents.rs  batch_compile.rs  config.rs  field_directives.rs  generate_artifacts.rs  isograph_literals.rs  main.rs  opt.rs  refetch_fields.rs  schema.rs  watch.rs  write_artifacts.rs
crates/isograph_compiler/: Cargo.toml  README.md
crates/isograph_compiler/src/: add_selection_sets.rs  batch_compile.rs  changed_artifacts.rs  compiler_state.rs  create_schema.rs  create_type_system_schema.rs  create_unvalidated_schema.rs  db_singletons.rs  entity_access.rs  field_directives.rs  get_validated_schema.rs  isograph_literals.rs  lib.rs  parse_files.rs  process_iso_literals.rs  read_files.rs  refetch_fields.rs  schema.rs  source_files.rs  watch.rs  with_duration.rs  write_artifacts.rs
crates/isograph_config/: Cargo.toml
crates/isograph_config/src/: compilation_options.rs  foo.rs  lib.rs  main.rs
crates/isograph_fixture_tests/: Cargo.toml
crates/isograph_fixture_tests/src/: config_for_test.rs  main.rs
crates/isograph_lang_parser/: Cargo.toml  README.md
crates/isograph_lang_parser/fixtures/: commented-out.input.js  commented-out.output  constant-null.input.js  constant-null.output  constant-object-literal.input.js  constant-object-literal.output  entrypoint-basic.input.js  entrypoint-basic.output  entrypoint-with-directives.input.js  (+68 more)
crates/isograph_lang_parser_wasm/: Cargo.toml
crates/isograph_lang_types/: Cargo.toml  README.md
crates/isograph_lsp/: Cargo.toml
crates/isograph_schema/: Cargo.toml  README.md
crates/isograph_server/: Cargo.toml
crates/pico/: Cargo.toml
crates/pico_core/: Cargo.toml
crates/pico_macros/: Cargo.toml
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/src/: grammar.json  node-types.json  parser.c  scanner.c
(+2128 files in other folders)
