[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.83"
boxcar = "0.2.8"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.0.4"
colorize = "0.1.0"
crossbeam = "0.8"
dashmap = "6.0.1"
deluxe = "0.5.0"
hex = "0.4.3"
indexmap = "2.10.0"
lazy_static = "1.4"
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_std"] }
logos = "0.12"
lru = "0.13"
lsp-server = "0.7.2"
lsp-types = "0.97.0"
md-5 = "0.10.6"
notify = "7.0.0"
notify-debouncer-full = "0.4.0"
once_cell = "1.8.0"
once_map = "0.4.20"
pathdiff = "0.2.1"
pretty-duration = "0.1.1"
proc-macro2 = "1.0.92"
quote = "1.0.38"
regex = "1.6.0"
schemars = { version = "0.8.11", features = ["indexmap1"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.108"
sha2 = "0.10.8"
strum = { version = "0.27.0", features = ["derive"] }
swc_atoms = "0.6.5"
swc_core = "0.90.6"
swc_ecma_parser = "0.143.3"
swc_ecma_transforms_testing = "0.140.3"
swc_ecma_utils = "0.127.3"
swc_trace_macro = "2.0.0"
syn = "2.0.96"
testing = "0.35.18"
thiserror = "1.0.40"
tinyvec = "1.8.1"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.0.0", features = ["serde"] }

[profile.release.package.swc_isograph_plugin]
codegen-units = 1
# Optimize for size
opt-level = "s"
