[package]
name = "artifact_content"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
common_lang_types = { path = "../common_lang_types" }
graphql_lang_types = { path = "../graphql_lang_types" }
intern = { path = "../../relay-crates/intern" }
isograph_schema = { path = "../isograph_schema" }
isograph_config = { path = "../isograph_config" }
pico = { path = "../pico" }
isograph_lang_types = { path = "../isograph_lang_types" }
prelude = { path = "../prelude" }
indexmap = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
