[package]
name = "boulton_cli"
version = "0.0.1"
edition = "2021"

[dependencies]
structopt = "0.3.26"
thiserror = "1.0.40"
intern = { git = "https://github.com/facebook/relay.git" }
graphql_lang_parser = { path = "../graphql_lang_parser" }
graphql_lang_types = { path = "../graphql_lang_types" }
boulton_schema = { path = "../boulton_schema" }
boulton_lang_parser = { path = "../boulton_lang_parser" }
boulton_lang_types = { path = "../boulton_lang_types" }
common_lang_types = { path = "../common_lang_types" }
lazy_static = "1.4"
regex = "1.6.0"
