[package]
name = "common_lang_types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intern = { path = "../../relay-crates/intern" }
string_key_newtype = { path = "../string_key_newtype" }
serde = { workspace = true } 
