[package]
name = "common_lang_types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intern = { path = "../../relay-crates/intern" }
string_key_newtype = { path = "../string_key_newtype" }
pico = { path = "../pico" }
prelude = { path = "../prelude" }
colored = { workspace = true }
lazy_static = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
