[package]
name = "compiler-playground"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pico_macros = { path = "../pico_macros"}
pico = { path = "../pico"}
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
