[package]
name = "generate_artifacts"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
pathdiff = { workspace = true }
lazy_static = { workspace = true }
graphql_lang_types = { path = "../graphql_lang_types" }
isograph_schema = { path = "../isograph_schema" }
isograph_config = { path = "../isograph_config" }
isograph_lang_types = { path = "../isograph_lang_types" }
intern = { path = "../../relay-crates/intern" }
common_lang_types = { path = "../common_lang_types" }
