[package]
name = "generate_artifacts"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
pathdiff = { workspace = true }
lazy_static = { workspace = true }
graphql_lang_types = { path = "../graphql_lang_types" }
isograph_schema = { path = "../isograph_schema" }
isograph_config = { path = "../isograph_config" }
isograph_lang_types = { path = "../isograph_lang_types" }
intern = { path = "../../relay-crates/intern" }
common_lang_types = { path = "../common_lang_types" }
indexmap = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
