[package]
name = "graphql_artifact_generation"
version = "0.0.4"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff = "0.2.1"
lazy_static = "1.4"
isograph_schema = { path = "../isograph_schema" }
isograph_lang_types = { path = "../isograph_lang_types" }
intern = { path = "../../relay-crates/intern" }
graphql_lang_types = { path = "../graphql_lang_types" }
common_lang_types = { path = "../common_lang_types" }