[package]
name = "graphql_artifact_generation"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff = { workspace = true } 
lazy_static = { workspace = true }  
isograph_schema = { path = "../isograph_schema" }
isograph_config = { path = "../isograph_config" }
isograph_lang_types = { path = "../isograph_lang_types" }
intern = { path = "../../relay-crates/intern" }
graphql_lang_types = { path = "../graphql_lang_types" }
common_lang_types = { path = "../common_lang_types" }
