[package]
name = "graphql_lang_parser"
version = "0.0.4"
edition = "2021"
license = "MIT"

[dependencies]
graphql-syntax = { git = "https://github.com/facebook/relay.git" }
intern = { git = "https://github.com/facebook/relay.git" }
graphql_lang_types = { path = "../graphql_lang_types" }
common_lang_types = { path = "../common_lang_types" }
logos = "0.12"
thiserror = "1.0.40"
