[package]
name = "graphql_lang_types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
intern = { path = "../../relay-crates/intern" }
common_lang_types = { path = "../common_lang_types" }
strum = { version = "0.25.0", features = ["derive"] }
serde = { workspace = true }
thiserror = { workspace = true }
