[package]
name = "graphql_lang_types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
intern = { path = "../../relay-crates/intern" }
common_lang_types = { path = "../common_lang_types" }
prelude = { path = "../prelude" }
strum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
