[package]
name = "graphql_schema_parser"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
graphql-syntax = { path = "../../relay-crates/graphql-syntax" }
intern = { path = "../../relay-crates/intern" }
graphql_lang_types = { path = "../graphql_lang_types" }
common_lang_types = { path = "../common_lang_types" }
prelude = { path = "../prelude" }
logos = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
