[package]
name = "isograph_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isograph_schema = { path = "../isograph_schema" }
lazy_static = "1.4"
regex = "1.6.0"
colored = "2.0.4"
serde = "1.0.190"
serde_json = "1.0.108"
