[package]
name = "isograph_cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
common_lang_types = { path = "../common_lang_types" }
graphql_network_protocol = { path = "../graphql_network_protocol" }
intern = { path = "../../relay-crates/intern" }
isograph_compiler = { path = "../isograph_compiler" }
isograph_config = { path = "../isograph_config" }
isograph_lsp = { path = "../isograph_lsp" }
sql_network_protocol = { path = "../sql_network_protocol" }
colored = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
notify-debouncer-full = { workspace = true }
pretty-duration = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

[lints]
workspace = true
