[package]
name = "isograph_compiler"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
generate_artifacts = { path = "../generate_artifacts" }
graphql_lang_types = { path = "../graphql_lang_types" }
isograph_config = { path = "../isograph_config" }
isograph_schema = { path = "../isograph_schema" }
isograph_lang_parser = { path = "../isograph_lang_parser" }
isograph_lang_types = { path = "../isograph_lang_types" }
common_lang_types = { path = "../common_lang_types" }
thiserror = "1.0.40"
intern = { path = "../../relay-crates/intern" }
lazy_static = { workspace = true }
regex = { workspace = true }
colored = { workspace = true }
notify = { workspace = true }
pathdiff = { workspace = true }
tokio = { workspace = true }
notify-debouncer-full = { workspace = true }
pretty-duration = { workspace = true }
tracing = { workspace = true }
