[package]
name = "isograph_compiler"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
common_lang_types = { path = "../common_lang_types" }
artifact_content = { path = "../artifact_content" }
graphql_lang_types = { path = "../graphql_lang_types" }
isograph_config = { path = "../isograph_config" }
isograph_schema = { path = "../isograph_schema" }
isograph_lang_types = { path = "../isograph_lang_types" }
intern = { path = "../../relay-crates/intern" }
pico = { path = "../pico" }
pico_macros = { path = "../pico_macros" }
prelude = { path = "../prelude" }
colored = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
pathdiff = { workspace = true }
pretty-duration = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
