[package]
name = "isograph_config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_lang_types = { path = "../common_lang_types" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colorize = { workspace = true }
tracing = { workspace = true }
