[package]
name = "isograph_config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "build_json_schema"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_lang_types = { path = "../common_lang_types" }
intern = { path = "../../relay-crates/intern" }
pico = { path = "../pico" }
pico_macros = { path = "../pico_macros" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
