[package]
name = "isograph_lang_parser"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
common_lang_types = { path = "../common_lang_types" }
isograph_lang_types = { path = "../isograph_lang_types" }
intern = { path = "../../relay-crates/intern" }
graphql_lang_types = { path = "../graphql_lang_types" }
logos = { workspace = true }
thiserror = { workspace = true }
