[package]
name = "isograph_lang_parser_wasm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
isograph_lang_parser = { path = "../isograph_lang_parser" }
common_lang_types = { path = "../common_lang_types" }
intern = { path = "../../relay-crates/intern" }
isograph_lang_types = { path = "../isograph_lang_types" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1" 

