[package]
name = "isograph_lang_types"
version =  { workspace = true }
edition =  { workspace = true }
license = { workspace = true}

[dependencies]
common_lang_types = { path = "../common_lang_types" }
graphql_lang_types = { path = "../graphql_lang_types" }
intern = { path = "../../relay-crates/intern" }
u32_newtypes = { path = "../u32_newtypes" }
serde = { workspace = true }
thiserror = { workspace = true }
