[package]
name = "isograph_lang_types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
common_lang_types = { path = "../common_lang_types" }
graphql_lang_types = { path = "../graphql_lang_types" }
intern = { path = "../../relay-crates/intern" }
pico = { path = "../pico" }
pico_macros = { path = "../pico_macros" }
lsp-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
