[package]
name = "isograph_lsp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
common_lang_types = { path = "../common_lang_types" }
intern = { path = "../../relay-crates/intern" }
isograph_compiler = { path = "../isograph_compiler" }
isograph_config = { path = "../isograph_config" }
isograph_lang_parser = { path = "../isograph_lang_parser" }
isograph_lang_types = { path = "../isograph_lang_types" }
isograph_schema = { path = "../isograph_schema" }
pico = { path = "../pico" }
pico_macros = { path = "../pico_macros" }
resolve_position = { path = "../resolve_position" }
colored = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true, features = ["kv_unstable", "kv_unstable_std"] }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = [
  "float_roundtrip",
  "unbounded_depth",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util", "tracing"] }
tracing = { workspace = true }
url = { workspace = true }
