[package]
name = "isograph_schema"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_lang_types = { path = "../common_lang_types" }
graphql_lang_types = { path = "../graphql_lang_types" }
impl_base_types_macro = { path = "../impl_base_types_macro" }
intern = { path = "../../relay-crates/intern" }
isograph_config = { path = "../isograph_config" }
isograph_lang_parser = { path = "../isograph_lang_parser" }
isograph_lang_types = { path = "../isograph_lang_types" }
pico = { path = "../pico" }
pico_macros = { path = "../pico_macros" }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
