[package]
name = "pico"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
intern = { path = "../../relay-crates/intern" }
pico_macros = { path = "../pico_macros" }
u64_newtypes = { path = "../u64_newtypes" }
boxcar = { workspace = true }
dashmap = { workspace = true }
once_map = { workspace = true }
serde = { workspace = true } 
thiserror = { workspace = true }
tracing = { workspace = true }
