[package]
name = "pico"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
intern = { path = "../../relay-crates/intern" }
pico_macros = { path = "../pico_macros" }
u64_newtypes = { path = "../u64_newtypes" }
bincode = { workspace = true }
boxcar = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
once_map = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
