[package]
name = "pico_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
boxcar = { workspace = true }
dashmap = { workspace = true }
once_map = { workspace = true }
thiserror = { workspace = true }
intern = { path = "../../relay-crates/intern" }
serde = { workspace = true }
u64_newtypes = { path = "../u64_newtypes" }
