[package]
name = "pico_macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert_case = { workspace = true }
deluxe = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
